<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Colocviu1_13MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="3"
            android:columnCount="3"
            android:layout_gravity="center">

            <Button
                android:id="@+id/north_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/north"/>

            <Button
                android:id="@+id/east_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/east"/>

            <Button
                android:id="@+id/west_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="2"
                android:text="@string/west"/>

            <Button
                android:id="@+id/south_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:text="@string/south"/>

        </GridLayout>

        <EditText
            android:id="@+id/instructions_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="text"
            android:ems="10"
            android:layout_gravity="left"
            android:gravity="left"/>

        <Button
            android:id="@+id/navigate_to_secondary_activity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/navigate_to_secondary_activity"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>